--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "chance": "^1.1.11",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
