--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "shivam goswami",
   "license": "ISC",
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "chance": "^1.1.11",
